email and reports modules implementation
